--- a/front-end/secao-7/dia-4-actions-assincronas/exercise-game-of-thunks/package.json
+++ b/front-end/secao-7/dia-4-actions-assincronas/exercise-game-of-thunks/package.json
@@ -13,6 +13,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "style": "^0.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
